CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.2

	- cupsSideChannelRead() did not return an error for short reads.
	- The installed PAM configuration file did not use the correct options
	  with the pam_unix2 module (STR #3313)
	- The scheduler did not preserve default options that contained special
	  characters (STR #3340)
	- The scheduler did not remove old pre-filters when updating a printer
	  driver (STR #3342)
	- The HP/GL-2 filter did not check for early end-of-file (STR #3319)
	- The USB backend did not compile on some platforms (STR #3332)
	- cupsSideChannelSNMPWalk() could go into an infinite loop with broken
	  SNMP implementations.


CHANGES IN CUPS V1.4.1

	- Documention fixes (STR #3296)
	- SNMP supply levels and states were wrong for some printers.
	- The IPP backend did not update the auth-info-required value.
	- The libusb-based USB backend would hang at the end of the job
	  (STR #3315, STR #3318)
	- DNS-SD registrations for raw queues had an empty "ty" key (STR #3299)
	- The JPEG and BMP MIME type rules were broken (STR #3284)
	- cupsGetNamedDest returned the default printer when the named
	  destination did not exist (STR #3285)
	- The JobKillDelay was not triggered for canceled jobs (STR #3292)
	- The PPD compiler could get in an infinite loop (STR #3293)
	- The configure check for dns-sd.h was broken (STR #3297)
	- The "Query Printer for Default Options" page did not go away if the
	  query job was held (STR #3302)
	- Boolean options did not show up as selected in the web interface
	  (STR #3303)
      	- The scheduler did not cache or report driver information files
	  correctly, leading to a variety of issues (STR #3283, STR #3297,
	  STR #3305)
	- cupsDoIORequest() did not abort on permanent errors (STR #3311)
	- Modifying a class in the web interface did not work (STR #3312)
	- BrowseLocalProtocols could be cleared when changing the sharing
	  setting (STR #3287)
	- The scheduler could return an empty supported document format