@@ -7,33 +7,33 @@ Terminal=false
 Type=Application
 Name=Manage Printing
 Comment=CUPS Web Interface
-Name[de.UTF-8]=Druckerverwaltung
-Comment[de.UTF-8]=CUPS Webinterface
-Name[en_US.UTF-8]=Manage Printing
-Comment[en_US.UTF-8]=CUPS Web Interface
-Name[es.UTF-8]=Administrar impresión
-Comment[es.UTF-8]=Interfaz Web de CUPS
-Name[et.UTF-8]=Trükkimise haldur
-Comment[et.UTF-8]=CUPS-i veebiliides
-Name[eu.UTF-8]=Kudeatu inprimaketak
-Comment[eu.UTF-8]=CUPSen web interfazea
-Name[fr.UTF-8]=Gestionnaire d'impression
-Comment[fr.UTF-8]=Interface Web de CUPS
-Name[he.UTF-8]=נהל הדפסות
-Comment[he.UTF-8]=ממשק דפדפן של CUPS
-Name[id.UTF-8]=Manajemen Pencetakan
-Comment[id.UTF-8]=Antarmuka Web CUPS
-Name[it.UTF-8]=Gestione stampa
-Comment[it.UTF-8]=Interfaccia web di CUPS
-Name[ja.UTF-8]=印刷の管理
-Comment[ja.UTF-8]=CUPS Web インタフェース
-Name[pl.UTF-8]=Zarządzanie drukowaniem
-Comment[pl.UTF-8]=Interfejs WWW CUPS
-Name[ru.UTF-8]=Настройка печати
-Comment[ru.UTF-8]=Настройка CUPS
-Name[sv.UTF-8]=Hantera skrivare
-Comment[sv.UTF-8]=CUPS webb-gränssnitt
-Name[zh.UTF-8]=打印机管理
-Comment[zh.UTF-8]=CUPS网页界面
-Name[zh_TW.UTF-8]=印表管理
-Comment[zh_TW.UTF-8]=CUPS 網頁介面
+Name[de]=Druckerverwaltung
+Comment[de]=CUPS Webinterface
+Name[en_US]=Manage Printing
+Comment[en_US]=CUPS Web Interface
+Name[es]=Administrar impresión
+Comment[es]=Interfaz Web de CUPS
+Name[et]=Trükkimise haldur
+Comment[et]=CUPS-i veebiliides
+Name[eu]=Kudeatu inprimaketak
+Comment[eu]=CUPSen web interfazea
+Name[fr]=Gestionnaire d'impression
+Comment[fr]=Interface Web de CUPS
+Name[he]=נהל הדפסות
+Comment[he]=ממשק דפדפן של CUPS
+Name[id]=Manajemen Pencetakan
+Comment[id]=Antarmuka Web CUPS
+Name[it]=Gestione stampa
+Comment[it]=Interfaccia web di CUPS
+Name[ja]=印刷の管理
+Comment[ja]=CUPS Web インタフェース
+Name[pl]=Zarządzanie drukowaniem
+Comment[pl]=Interfejs WWW CUPS
+Name[ru]=Настройка печати
+Comment[ru]=Настройка CUPS
+Name[sv]=Hantera skrivare
+Comment[sv]=CUPS webb-gränssnitt
+Name[zh]=打印机管理
+Comment[zh]=CUPS网页界面
+Name[zh_TW]=印表管理
+Comment[zh_TW]=CUPS 網頁介面
